docs(vscode): add build tags config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,7 @@
             "args": [
                 "--godog.tags=tag"
             ],
+            "buildFlags": "-tags=integration",
             "showLog": false
         },
         {
