--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,17 @@
             "showLog": false
         },
         {
+            "name": "LaunchPackage",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${fileDirname}",
+            "env": {},
+            "args": [
+                "ws:server"
+            ]
+        },
+        {
             "name": "Launch",
             "type": "go",
             "request": "launch",
@@ -30,14 +41,14 @@
             "remotePath": "",
             "port": 8888,
             "host": "127.0.0.1",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/cmd/wayneutil",
             "env": {
                 "MTS_DATABASE_LOGMODE": true
             },
             "args": [
-                "worker:offer",
+                "ws:server",
                 "-f",
-                "/Users/wayne/projects/toolsgo/config/setting.stbk.loc.yml"
+                "/home/shen/projects/servermodule/env.yaml"
             ],
             "showLog": false
         },
